test/libsolidity/syntaxTests/pragma/invalid_pragma.sol
pragma 0;
// ----
// SyntaxError: (0-9): Invalid pragma "0"
